syntax = "proto3";
package thesixnetwork.sixnft.nftmngr.v062;
import "nftmngr/v062/attribute_definition.proto";
import "nftmngr/v062/action.proto";
import "nftmngr/v062/status.proto";
import "nftmngr/v062/on_off_switch.proto";
import "nftmngr/v062/nft_attribute_value.proto";
option go_package = "github.com/thesixnetwork/sixnft/x/nftmngr/types/v062";

message OnChainData {
  bool reveal_required = 1;
  bytes reveal_secret = 2;
  repeated AttributeDefinition nft_attributes = 3; 
  repeated AttributeDefinition token_attributes = 4; 
  repeated Action actions = 5; 
  map<string, bool> status = 6;
  map<string, bool> on_off_switch = 7;
  repeated NftAttributeValue nft_attributes_value = 8;
}
